# awesome-llm-apps

./: .gitignore  README.md  UV_MIGRATION_GUIDE.md  pyproject.toml
advanced_ai_agents/autonomous_game_playing_agent_apps/ai_3dpygame_r1/: ai_3dpygame_r1.py
advanced_llm_apps/thinkpath_chatbot_app/: package-lock.json
rag_tutorials/agentic_rag_embedding_gemma/: agentic_rag_embeddinggemma.py
