[project]
name = "awesome-llm-apps"
version = "0.1.0"
description = "A curated collection of Awesome LLM apps built with RAG, AI Agents, Multi-agent Teams, MCP, Voice Agents, and more"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Shubham Saboo" }
]

# Core dependencies used across multiple projects
dependencies = [
    "streamlit>=1.28.0",
    "openai>=1.0.0",
    "ollama>=0.6.1",
]

[project.optional-dependencies]
# AI Agent frameworks
agents = [
    "agno>=2.2.10",
    "openai-agents",
    "mcp-agent>=0.0.14",
]

# RAG and Vector Stores
rag = [
    "lancedb",
    "pypdf",
    "faiss-cpu",
]

# Web and API tools
web = [
    "firecrawl-py",
    "google-search-results",
    "icalendar",
]

# Local LLM support
local-llm = [
    "ollama",
]

# Voice AI
voice = [
]

# MCP Agents
mcp = [
    "mcp-agent>=0.0.14",
    "asyncio>=3.4.3",
]

# Development tools
dev = [
    "pytest",
    "ruff",
    "mypy",
]

# All dependencies for development
all = [
    "agno>=2.2.10",
    "openai-agents",
    "mcp-agent>=0.0.14",
    "lancedb",
    "pypdf",
    "faiss-cpu",
    "firecrawl-py",
    "google-search-results",
    "icalendar",
    "ollama",
    "asyncio>=3.4.3",
    "pytest",
    "ruff",
    "mypy",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

# Mark this as a virtual project (no package to build)
package = false

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
